force-app/main/default/objects/Promo_Code__c/Promo_Code__c.object-meta.xml
<CustomObject>
    <description>Member-facing promotional code. One record per (Code, CurrencyIsoCode). Composite uniqueness enforced via Matching/Duplicate Rule. Created in Draft via wizard; activated by Quick Action or Approval result.</description>
    <label>Promo Code</label>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>Promo Code Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promo Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>