force-app/main/default/objects/Promo_Code__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account scope for the code. When set, only members affiliated with this Account can redeem (sponsor account, partner account, Enterprise account). Multi-Account codes use distinct codes per Account for clean attribution.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Scoped Promo Codes</relationshipLabel>
    <relationshipName>Scoped_Promo_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>