force-app/main/default/objects/Promo_Code__c/fields/Applicable_To__c.field-meta.xml
<CustomField>
    <fullName>Applicable_To__c</fullName>
    <description
  >Which transactional flows the code is valid for. Apply-time validation rejects codes whose Applicable To doesn&apos;t include the cart&apos;s flow type. Both = code is valid in both Join and Renew carts.</description>
    <inlineHelpText
  >Pick which checkout flow this code is valid in: Join (new memberships), Renew (renewals), or Both.</inlineHelpText>
    <label>Applicable To</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Both</fullName>
                <default>true</default>
                <label>Both</label>
            </value>
            <value>
                <fullName>Join</fullName>
            </value>
            <value>
                <fullName>Renew</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>