force-app/main/default/objects/Promo_Code__c/fields/Application_Level__c.field-meta.xml
<CustomField>
    <fullName>Application_Level__c</fullName>
    <description>Per Order: promo value distributed proportionately across eligible lines by line subtotal. Per Line: full promo value applied to each eligible line (e.g., $20 promo on 3 lines = $60 total). Drives allocation behavior in PromoCodeAllocationEngine.</description>
    <label>Application Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per Order</fullName>
                <default>true</default>
                <label>Per Order</label>
            </value>
            <value>
                <fullName>Per Line</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>