force-app/main/default/objects/Promo_Code__c/fields/Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, the creation wizard submits the record(s) to Approval Process and leaves Status = Draft until approved.</description>
    <label>Approval Required</label>
    <type>Checkbox</type>
</CustomField>