force-app/main/default/objects/Promo_Code__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Member-entered promo code string. Uppercase alphanumeric convention validated in the creation wizard. Composite-unique with CurrencyIsoCode.</description>
    <externalId>true</externalId>
    <label>Code</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>