force-app/main/default/objects/Promo_Code__c/fields/Combinable__c.field-meta.xml
<CustomField>
    <fullName>Combinable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When true, this code can stack with other codes in the same Combination_Group__c.</description>
    <label>Combinable</label>
    <type>Checkbox</type>
</CustomField>