force-app/main/default/objects/Promo_Code__c/fields/Combination_Group__c.field-meta.xml
<CustomField>
    <fullName>Combination_Group__c</fullName>
    <description
  >Required when Combinable__c = true. Codes in the same group can stack; cross-group combinations are blocked.</description>
    <label>Combination Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
                <default>true</default>
                <label>General</label>
            </value>
            <value>
                <fullName>Sponsor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>