force-app/main/default/objects/Promo_Code__c/fields/Confirmed_Usage_Count__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Usage_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Apex-maintained. Incremented when a Promo_Code_Item__c flips Pending -&gt; Confirmed (Order Activation).</description>
    <label>Confirmed Usage Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>