force-app/main/default/objects/Promo_Code__c/fields/Discount_Value__c.field-meta.xml
<CustomField>
    <fullName>Discount_Value__c</fullName>
    <description>If Discount_Type__c = Percent: 0-100. If Amount: greater than 0 in record's currency. Validated in the creation wizard.</description>
    <label>Discount Value</label>
    <precision>10</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>