force-app/main/default/objects/Promo_Code__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <description>Member-facing label shown at apply time on the cart.</description>
    <label>Display Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>