force-app/main/default/objects/Promo_Code__c/fields/Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_End_Date__c</fullName>
    <description>Nightly Flow flips Status to Expired when this date is in the past.</description>
    <label>Effective End</label>
    <type>DateTime</type>
</CustomField>