force-app/main/default/objects/Promo_Code__c/fields/Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Start_Date__c</fullName>
    <description>Apply-time validation requires NOW() &gt;= start.</description>
    <label>Effective Start</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>