force-app/main/default/objects/Promo_Code__c/fields/Member_Type_Scope__c.field-meta.xml
<CustomField>
    <fullName>Member_Type_Scope__c</fullName>
    <description>Blank = all member types. Values mirror the Membership Product Family product names so apply-time scoping can be checked directly against the cart's product.</description>
    <label>Member Type Scope</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Allied Membership</fullName>
            </value>
            <value>
                <fullName>Direct Membership</fullName>
            </value>
            <value>
                <fullName>Educator Membership</fullName>
            </value>
            <value>
                <fullName>Government Membership</fullName>
            </value>
            <value>
                <fullName>Nonprofit Membership</fullName>
            </value>
            <value>
                <fullName>Press Membership</fullName>
            </value>
            <value>
                <fullName>Student Membership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>