force-app/main/default/objects/Promo_Code__c/fields/Min_Months_Since_Last_Active__c.field-meta.xml
<CustomField>
    <fullName>Min_Months_Since_Last_Active__c</fullName>
    <description
  >Optional lookback used for Join-eligible codes only: the member&apos;s last active membership must be at least this many full months in the past for the code to apply. Blank = no lookback check. Reads Account.Last_Active_Membership_Date__c; null on Account = treated as never-active (passes the check).</description>
    <inlineHelpText
  >Optional. Only meaningful for codes applicable to Join. Example: 12 means the code is valid only for members whose last active membership ended at least 12 months ago.</inlineHelpText>
    <label>Min Months Since Last Active</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>