force-app/main/default/objects/Promo_Code__c/fields/Per_Member_Usage_Limit__c.field-meta.xml
<CustomField>
    <fullName>Per_Member_Usage_Limit__c</fullName>
    <description>Blank = unlimited. Enforced via Member__c on the Promo_Code_Item__c junction.</description>
    <label>Per-Member Usage Limit</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>