force-app/main/default/objects/Promo_Code__c/fields/Product_Family_Scope__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_Scope__c</fullName>
    <description>Used only when Product_Scope_Type__c = Product Family. Multi-select of Product2.Family picklist values. OrderItems whose Product2.Family is in the selected set are eligible for the promo. Canonical values to be confirmed with Membership Ops; starter set drawn from common GBTA product families.</description>
    <label>Product Family Scope</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Membership</fullName>
            </value>
            <value>
                <fullName>Chapter</fullName>
            </value>
            <value>
                <fullName>Section</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>