force-app/main/default/objects/Promo_Code__c/fields/Product_Scope_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Scope_Type__c</fullName>
    <description>Drives how Specific_Products__c is interpreted. All Items: ignore Specific_Products__c. Product Type: single value (Membership/Chapter/Section). Specific Products: comma-separated Product Codes.</description>
    <label>Product Scope Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Items</fullName>
                <default>true</default>
                <label>All Items</label>
            </value>
            <value>
                <fullName>Product Type</fullName>
            </value>
            <value>
                <fullName>Specific Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>