force-app/main/default/objects/Promo_Code__c/fields/Specific_Products__c.field-meta.xml
<CustomField>
    <fullName>Specific_Products__c</fullName>
    <description>Used only when Product_Scope_Type__c = Specific Products. Comma-separated list of Product2.Code values (NOT names) populated by the promoSpecificProductPicker LWC (which filters out IsActive = false products and surfaces Product Code alongside Product Name). OrderItems whose Product2.Code is in the list are eligible.</description>
    <label>Specific Products</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>