force-app/main/default/objects/Promo_Code__c/fields/Sponsor_Account__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sponsorship-restricted codes. Apply-time check: redeeming member's account must match. Multi-sponsor codes use distinct codes per sponsor.</description>
    <label>Sponsor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sponsored Promo Codes</relationshipLabel>
    <relationshipName>Sponsored_Promo_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>