force-app/main/default/objects/Promo_Code__c/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <description>Member-facing terms surfaced on cart at apply time.</description>
    <label>Terms</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>