force-app/main/default/objects/Promo_Code__c/fields/Total_Usage_Limit__c.field-meta.xml
<CustomField>
    <fullName>Total_Usage_Limit__c</fullName>
    <description>Blank = unlimited.</description>
    <label>Total Usage Limit</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>