force-app/main/default/objects/Promo_Code__c/validationRules/VR_PromoCode_MinMonths_Requires_Join.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_PromoCode_MinMonths_Requires_Join</fullName>
    <active>true</active>
    <description
  >Min Months Since Last Active only makes sense for codes valid in the Join flow. Block save if the field is populated but Applicable To is Renew-only.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Min_Months_Since_Last_Active__c)),
  ISPICKVAL(Applicable_To__c, "Renew")
)</errorConditionFormula>
    <errorDisplayField>Min_Months_Since_Last_Active__c</errorDisplayField>
    <errorMessage
  >Min Months Since Last Active applies to the Join flow. Either clear this value or set Applicable To = Join or Both.</errorMessage>
</ValidationRule>