force-app/main/default/objects/Promo_Code__c/validationRules/VR_PromoCode_Status_Transitions.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_PromoCode_Status_Transitions</fullName>
    <active>true</active>
    <description>v1 lifecycle: Draft is the default; Activate Now or the Activate Quick Action moves Draft -&gt; Active. This rule blocks the only invalid v1 transition: Active -&gt; Draft. See design-overview.md §8.3.</description>
    <errorConditionFormula>AND(
  NOT(ISNEW()),
  ISCHANGED(Status__c),
  ISPICKVAL(PRIORVALUE(Status__c), "Active"),
  ISPICKVAL(Status__c, "Draft")
)</errorConditionFormula>
    <errorMessage>Cannot move an Active promo code back to Draft. To stop a code being used, deactivate via the bypass-permitted admin flow or let the effective window expire.</errorMessage>
</ValidationRule>