force-app/main/default/objects/Promo_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>Discount_Type__c</columns>
    <columns>Discount_Value__c</columns>
    <columns>Status__c</columns>
    <columns>Effective_Start_Date__c</columns>
    <columns>Effective_End_Date__c</columns>
    <columns>Confirmed_Usage_Count__c</columns>
    <columns>Total_Usage_Limit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>